@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2005 National Association of REALTORS(R)
+ * Copyright (C) 2005-2009 National Association of REALTORS(R)
  *
  * All rights reserved.
  *
@@ -27,6 +27,7 @@ using std::endl;
 using std::exception;
 
 void dumpSystem(RetsMetadata * metadata);
+void dumpAllForeignKeys(RetsMetadata * metadata);
 void dumpAllResources(RetsMetadata * metadata);
 void dumpAllClasses(RetsMetadata * metadata, MetadataResource * resource);
 void dumpAllTables(RetsMetadata * metadata, MetadataClass * aClass);
@@ -90,6 +91,7 @@ int main(int argc, char * argv[])
 
         RetsMetadata * metadata = session->GetMetadata();
         dumpSystem(metadata);
+        dumpAllForeignKeys(metadata);
         dumpAllResources(metadata);
 
         session->Logout();
@@ -115,6 +117,25 @@ void dumpSystem(RetsMetadata * metadata)
     cout << "Comments: " << system->GetComments() << endl;
 }
 
+void dumpAllForeignKeys(RetsMetadata * metadata)
+{
+    MetadataForeignKeyList foreign_keys = metadata->GetAllForeignKeys();
+    MetadataForeignKeyList::iterator i;
+    cout << endl;
+    for (i = foreign_keys.begin(); i != foreign_keys.end(); i++)
+    {
+        MetadataForeignKey * foreign_key = *i;
+        
+        cout << "Foreign Key ID:" << foreign_key->GetForeignKeyID() << endl;
+        cout << "  Parent Resource: " << foreign_key->GetParentResourceID();
+        cout << ", Class: " << foreign_key->GetParentClassID();
+        cout << ", Name: " << foreign_key->GetParentSystemName() << endl;
+        cout << "  Child Resource: " << foreign_key->GetChildResourceID();
+        cout << ", Class: " << foreign_key->GetChildClassID();
+        cout << ", Name: " << foreign_key->GetChildSystemName() << endl;
+    }
+}
+
 void dumpAllResources(RetsMetadata * metadata)
 {
     MetadataResourceList resources = metadata->GetAllResources();
@@ -132,6 +153,8 @@ void dumpAllResources(RetsMetadata * metadata)
         dumpAllLookups(metadata, resource);
     }
 }
+
+
 
 void dumpAllClasses(RetsMetadata * metadata, MetadataResource * resource)
 {
