@@ -32,5 +32,5 @@
 /rets/getObject\?ID\=LN000001\:*\&Location\=1\&Resource\=Property\&Type\=Photo = photo.2
 /rets/login = login
 /rets/logout = logout
-/rets/search\?Class\=ResidentialProperty\&Count\=1\&Format\=COMPACT-DECODED\&Query\=\(ListPrice%3d300000-\)\&QueryType\=DMQL2\&SearchType\=Property\&Select\=ListingID,ListPrice,Beds,City&StandardNames\=1 = search.1
-/rets/search\?Class\=ResidentialProperty\&Count\=1\&Format\=COMPACT-DECODED\&Query\=\(ListPrice%3d300000-\)\&QueryType\=DMQL2\&SearchType\=Property\&StandardNames\=1 = search.2
+/rets/search\?Class\=RES\&Count\=1\&Format\=COMPACT-DECODED\&Query\=\(ListPrice%3d300000-\)\&QueryType\=DMQL2\&SearchType\=Property\&Select\=ListingID,ListPrice,Beds,City&StandardNames\=1 = search.1
+/rets/search\?Class\=RES\&Count\=1\&Format\=COMPACT-DECODED\&Query\=\(ListPrice%3d300000-\)\&QueryType\=DMQL2\&SearchType\=Property\&StandardNames\=1 = search.2
