@@ -1,7 +1,11 @@
 Version 1.3.4 - xx xxx 2009
 
+  * Bundle MSVCPxx.DLL with the Windows Ruby build.
+
   * Handle malformed multi-part response if enabled.
     Ticket #112.
+
+  * Add GetForeignKeys() to RetsMetadata. Ticket #115.
   
 Version 1.3.3 - 15 Jul 2009
   
